[package]
name = "easee_cost_post_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = {}
clap = "2.33.3"
chrono = "0.4.26"
log = "0.4.20"
env_logger = "0.10.0"
